--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,6 +8,8 @@
 	"site.soonStayConnected": "Soon, stay connected",
 	"presentation.title": "Hi, I am Miguel",
 	"presentation.description": "I am a Brazilian React Native Developer and OSS Contributor with over about 7 years of experience. I am currently working with React Native and Typescript. I am also passionate about Open Source and Bitcoin ₿.",
+	"experience.rn.period": "2024 - Present",
+	"experience.rn.description": "As a member of Issue Triaging Squad, I am responsible for triage, tagging and reproduce issues.",
 	"experience.totvs.description": "As a mobile developer at TOTVS, I was responsible for developing and executing improvements to the facial recognition process, as well as improving the app's performance and keeping it up to date with the latest React Native releases.",
 	"experience.totvs.period": "2022 - Present",
 	"experience.fk.description": "As a software developer at FK Grupo, I was responsible for architecting and developing offline-first mobile app's with React Native, Redux and Redux Saga. I was also responsible for developing and maintaining micro services in Node JS with TDD, using the Kong gateway.",
